--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,5 +32,9 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent">
 
+        <Button
+                android:text="Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/button"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
