--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
-            android:id="@+id/constraintLayout">
+            android:id="@+id/constraintLayout" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout_main_menu">
 
         <ImageView
                 android:layout_width="0dp"
-                android:layout_height="334dp" app:srcCompat="@drawable/flower2"
-                android:id="@+id/imageView"
+                android:layout_height="0dp" app:srcCompat="@drawable/flower2"
+                android:id="@+id/imgview_display"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" android:contentDescription="@string/your_puzzle"/>
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
@@ -30,7 +32,16 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout_main_menu">
 
+        <Button
+                android:text="@string/btn_upload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/btn_upload"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.035" app:layout_constraintVertical_bias="0.49"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
