--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:id="@+id/main_constraint_layout">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="368dp"
@@ -24,7 +24,8 @@
                 android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                 android:contentDescription="@string/your_puzzle"
                 android:scaleType="centerInside" android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="invisible"/>
         <TextView
                 android:text="@string/placeholder_upload_image"
                 android:layout_width="233dp"
